# meta-hybrid_mount

./: .gitignore  Cargo.toml  README.md  README_ZH.md  changelog.md  module.json  update.json
.github/workflows/: build.yml  license_header.yml  lints.yml  release.yml
.jules/: journal.md
module/: customize.sh  metauninstall.sh  module.prop  uninstall.sh
src/: defs.rs  engine.rs  magic_mount.rs  main.rs  overlay_mount.rs  scanner.rs  try_umount.rs  utils.rs
src/conf/: cli.rs  cli_handlers.rs  config.rs  mod.rs
src/core/: executor.rs  granary.rs  inventory.rs  manager.rs  mod.rs  planner.rs  state.rs  storage.rs  sync.rs
src/core/inventory/: mod.rs  model.rs  scanner.rs
src/core/ops/: executor.rs  mod.rs  planner.rs  sync.rs
src/magic_mount/: mod.rs
src/mount/: hymofs.rs  magic.rs  mod.rs  overlay.rs  try_umount.rs  umount_mgr.rs
src/mount/magic/: mod.rs
src/mount/magic_mount/: mod.rs
src/sys/: mod.rs  mount.rs  nuke.rs
src/utils/: fs.rs  log.rs  mod.rs  mount.rs  process.rs  validation.rs
src/utils/fs/: file.rs  mod.rs  xattr.rs
template/: config.toml
tools/notify/: Cargo.toml
webui/: package-lock.json  package.json  pnpm-lock.yaml
webui/src/: app.css
webui/src/components/: NavBar.svelte  NavBar.tsx  TopBar.css  TopBar.tsx
webui/src/lib/: api.mock.ts  api.ts  constants.ts  store.svelte.ts  store.ts  types.ts
webui/src/locales/: en-US.json  en.json  es.json  ja.json  ru.json  zh-CN.json  zh-HK.json  zhs.json  zht.json
webui/src/routes/: ConfigTab.svelte  ConfigTab.tsx  HymoTab.svelte  StatusTab.svelte
xbuild/src/: main.rs
xtask/src/: main.rs
