[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "meta-hybrid"
version = "0.2.8"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount", "process", "thread", "param"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = "0.4"
procfs = "0.18"
env_logger = "0.11.8"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"

[target.aarch64-linux-android.dependencies]
android_logger = "0.13"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
panic = "abort"