[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "meta-hybrid"
version = "2.0.21"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = "0.4"
procfs = "0.17"
env_logger = "0.11.8"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
walkdir = "2.5.0"
nix = { version = "0.30.1", features = ["fs", "ioctl", "mount"] }
regex-lite = "0.1.8"
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.1.0" }
cfg_aliases = "0.2.1"

[target.aarch64-linux-android.dependencies]
android_logger = "0.15"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
