[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "meta-hybrid"
version = "2.1.2"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
extattr = "1"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = "0.4"
procfs = "0.17"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
rayon = "1.10"
walkdir = "2.5.0"
nix = { version = "0.30.1", features = ["fs", "ioctl", "mount"] }
regex-lite = "0.1.8"
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.1.0" }
cfg_aliases = "0.2.1"
jwalk = "0.8.1"
log = "0.4.29"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
