# Copyright 2025 Meta-Hybrid Mount Authors
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "notify"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
reqwest = { version = "0.12.28", features = ["blocking", "multipart", "rustls-tls"], default-features = false }
serde_json = "1.0.149"
